Fix button wrapping on mobile

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -332,7 +332,7 @@ body {
         transition: background-color 0.3s cubic-bezier(0.55, 0, 0.1, 1);
 
         @media (max-width: $tablet) {
-          width: 160px;
+          width: 240px;
           height: 48px;
           margin-top: 42px;
           font-size: 17px;
